Add destroy option in edit

--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -3,4 +3,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @image %> |
-<%= link_to 'Back', images_path %>
+<%= link_to 'Back', images_path %> |
+<%= link_to 'Destroy', @image, method: :delete, data: { confirm: 'Are you sure?' } %>
