--- a/app/views/layouts/mylayout.html.erb
+++ b/app/views/layouts/mylayout.html.erb
@@ -10,6 +10,7 @@
     <meta name="author" content="Faizal Zakaria" />
     <%= stylesheet_link_tag "default", :media => "all" %>
     <%= stylesheet_link_tag "component", :media => "all" %>
+    <%= javascript_include_tag "application" %>
     <%= javascript_include_tag "modernizr.custom.js" %>
   </head>
 <body>
