--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.text_field :description %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t :submit_image %>
   </div>
 <% end %>
