Rework on form UI

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -30,7 +30,7 @@ html { height: 100%; }
 
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
-    background: #810606;
+    background: #303030;
     font-weight: 400;
     font-size: 15px;
     color: #333;
@@ -115,4 +115,31 @@ a {
 .codrops-top span.right a {
 	float: left;
 	display: block;
+}
+
+.title {
+    background: #5E8752;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	padding: 10px;
+	width: 400px;
+    margin: 10px auto 0 auto;
+}
+
+.title h1 {
+    text-align: center;
+    color: #384313;
+	font-size: 30px;
+	font-weight: bold;
+}
+
+table {
+    background: #5E8752;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	padding: 10px;
+	width: 400px;
+    margin: 5px auto 0 auto;
 }
