--- a/app/views/images/viewall.html.erb
+++ b/app/views/images/viewall.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing images</h1>
+<div class="title">
+  <h1>Listing images</h1>
+</div>
 
 <table>
   <tr>
@@ -22,4 +24,3 @@
 
 <br />
 
-<%= link_to 'New Image', new_image_path %>
