--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New image</h1>
+
+<div class="form_title">
+  <h1>New images</h1>
+</div>
 
 <%= render 'form' %>
-
+<div class="footer_form">
 <%= link_to 'Back', images_path %>
+</div>
+
