Rework on succesful create new image UI

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -119,7 +119,7 @@ form button:hover {
 	font-weight: bold;
 }
 
-.footer_form {
+.form_footer {
     text-align: center;
     background: #5E8752;
 	-moz-border-radius: 5px;
