--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -4,7 +4,7 @@
 
 <%= render 'form' %>
 
-<div class="footer_form">
+<div class="form_footer">
   <%= link_to 'Show', @image %> |
   <%= link_to 'Back', images_path %> |
   <%= link_to 'Destroy', @image, method: :delete, data: { confirm: 'Are you sure?' } %>
