--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,15 +1,17 @@
-<p id="notice"><%= notice %></p>
+<div class="form_title">
+  <h1><%= notice %></h1>
+  <p>
+    <b>Url:</b>
+    <%= @image.url %>
+  </p>
 
-<p>
-  <b>Url:</b>
-  <%= @image.url %>
-</p>
+  <p>
+    <b>Description:</b>
+    <%= @image.description %>
+  </p>
+</div>
 
-<p>
-  <b>Description:</b>
-  <%= @image.description %>
-</p>
-
-
-<%= link_to 'Edit', edit_image_path(@image) %> |
-<%= link_to 'Back', images_path %>
+<div class="form_footer">
+  <%= link_to 'Edit', edit_image_path(@image) %> |
+  <%= link_to 'Back', images_path %>
+</div>
