Add next prev room
- Add next and prev room
- Show last 10 images by default
- Rename db column description to title
- Add description

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -19,8 +19,13 @@
       <%= f.text_field :url, :size => 150 %>
       </li>
       <li>
+      <%= f.label :title %>
+      <%= f.text_field :title %>
+      </li>
+      <li>
       <%= f.label :description %>
-      <%= f.text_field :description %>
+      <%= f.text_area :description, :maxlength => "100", :rows => "5",
+      :cols => "5", :resize => "none" %>
       </li>
   </fieldset>
   <fieldset>
