--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -6,6 +6,11 @@
   </p>
 
   <p>
+    <b>Title:</b>
+    <%= @image.title %>
+  </p>
+
+  <p>
     <b>Description:</b>
     <%= @image.description %>
   </p>
