--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -6,11 +6,11 @@ html { height: 100%; }
 *,
 *:after,
 *:before {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 /* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
@@ -39,107 +39,115 @@ body {
 }
 
 a {
-	color: #000;
-	text-decoration: none;
+    color: #000;
+    text-decoration: none;
 }
 
 .container {
-	width: 100%;
-	height: 100%;
-	position: relative;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .container > h1 {
-	z-index: 9999;
-	font-weight: 400;
-	padding: 50px 20px;
+    z-index: 9999;
+    font-weight: 400;
+    padding: 50px 20px;
 }
 
 .js .container > h1 {
-	position: fixed;
-	-webkit-backface-visibility: hidden;
-	bottom: 0;
-	left: 0;
-	color: #f0f0f0;
-	padding: 20px;
-	font-size: 20px;
+    position: fixed;
+    -webkit-backface-visibility: hidden;
+    bottom: 0;
+    left: 0;
+    color: #f0f0f0;
+    padding: 20px;
+    font-size: 20px;
 }
 
 .container > h1 a {
-	font-size: 12px;
-	text-transform: uppercase;
-	display: inline-block;
-	padding: 0 0 0 10px;
-	color: #fff;
-	font-weight: 700;
+    font-size: 12px;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 0 0 0 10px;
+    color: #fff;
+    font-weight: 700;
 }
 
 .container > h1 a:hover,
 .container > h1 a.demo-current {
-	color: #222;
+    color: #222;
 }
 
 /* Header Style */
 .codrops-top {
-	line-height: 24px;
-	font-size: 11px;
-	text-transform: uppercase;
-	z-index: 9999;
-	background: rgba(255,255,255,0.4);
+    line-height: 24px;
+    font-size: 11px;
+    text-transform: uppercase;
+    z-index: 9999;
+    background: rgba(255,255,255,0.4);
 }
 
 .js .codrops-top {
-	position: fixed;
-	width: 100%;
-	left: 0;
-	top: 0;
-	background: transparent;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+    background: transparent;
 }
 
 .codrops-top a {
-	padding: 0px 10px;
-	letter-spacing: 1px;
-	color: #333;
-	color: rgba(0,0,0,0.7);
-	display: inline-block;
+    padding: 0px 10px;
+    letter-spacing: 1px;
+    color: #333;
+    color: rgba(0,0,0,0.7);
+    display: inline-block;
 }
 
 .codrops-top a:hover {
-	color: #000;
+    color: #000;
 }
 
 .codrops-top span.right {
-	float: right;
+    float: right;
 }
 
 .codrops-top span.right a {
-	float: left;
-	display: block;
+    float: left;
+    display: block;
 }
 
 .title {
     background: #5E8752;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	padding: 10px;
-	width: 400px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    padding: 10px;
+    width: 400px;
     margin: 10px auto 0 auto;
 }
 
 .title h1 {
     text-align: center;
     color: #384313;
-	font-size: 30px;
-	font-weight: bold;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 table {
     background: #5E8752;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	padding: 10px;
-	width: 400px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    padding: 10px;
+    width: 400px;
     margin: 5px auto 0 auto;
 }
+
+/*
+.footer {
+    background: #000000;
+    height: 5%;
+    position: relative;
+}
+*/
