--- a/app/views/images/viewall.html.erb
+++ b/app/views/images/viewall.html.erb
@@ -14,6 +14,7 @@
 <% @images.each do |image| %>
   <tr>
     <td><%= image.url %></td>
+    <td><%= image.title %></td>
     <td><%= image.description %></td>
     <td><%= link_to 'Show', image %></td>
     <td><%= link_to 'Edit', edit_image_path(image) %></td>
